   Emit the "build-start" signal only if saving succeeds.
 - src/build.c:
   Use #ifdef SYNC_SPAWN instead of G_OS_WIN32 for easier testing with 
   glib's asynchronous spawning (which doesn't work on Windows).
 - src/win32.c, src/win32.h, src/dialogs.c:
   Use GTK unsaved file dialog on Windows too because the button names 
   should be specific.


2011-10-02  Colomban Wendling  <colomban(at)geany(dot)org>

 * doc/geany.txt, doc/geany.html:
   Add myself as an author.
 * New release: Geany 0.21 "Gromia".


2011-10-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/images/*.png:
   Update documentation images.
 * doc/geany.txt, doc/geany.html:
   Update documentation for new images.


2011-09-28  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/utils.c:
   Fix utils_string_replace_all() to accept a NULL replacement again.


2011-09-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix not converting \n to document line endings in snippets.
 * src/editor.c:
   Fix not indenting snippet contents for documents with non-\n line
   endings.


2011-09-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/stash.c, src/keyfile.c, src/keyfile.h, src/ui_utils.c:
   Add configuration_add_various_pref_group().
 * src/win32.c:
   Fix \0 char in format string - save as dialog filter bug.


2011-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keyfile.c:
   Rename use_safe_file_saving various pref to use_atomic_file_saving
   as it's not 'safe'. Use old pref if new one is missing for
   compatibility with Geany <= 0.20.
 * src/prefs.c, src/stash.h, src/stash.c:
   Fix making various prefs tree sync with data values when showing
   the prefs dialog (patch by Dimitar Zhekov, thanks).


2011-09-17  Frank Lanitz  <frlan@frank.uvena.de>

 * po/fa.po, THANKS, src/about.c:
   Adding Persian translation. Thanks to Moein Owhadi Kareshk
 * THANKS: Adding Giuliano Manzitti to THANKS-file.

